[gd_scene format=3 uid="uid://cvqvw7ypmtpn2"]

[ext_resource type="FontFile" uid="uid://dmnv4rxtk5c2s" path="res://fonts/Xolonium-Regular.ttf" id="1_37p78"]
[ext_resource type="Script" uid="uid://d0hahp21scs4a" path="res://hud.gd" id="1_64ctp"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[node name="HUD" type="CanvasLayer" unique_id=1349355105]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="." unique_id=871899340]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 32
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="HiScoreLabel" type="Label" parent="." unique_id=1397833782]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -119.0
offset_right = 1.0
offset_bottom = 78.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.68235296, 1, 0.1254902, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 18
text = "Hi Score: 100"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Message" type="Label" parent="." unique_id=1277407977]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.11674089, 0.116740905, 0.11674089, 1)
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 49
text = "Dodge the Creeps!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="StartButton" type="Button" parent="." unique_id=1195273903]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("1_37p78")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_8sq4i")
text = "Start"
metadata/_edit_use_anchors_ = true

[node name="MessageTimer" type="Timer" parent="." unique_id=1197839733]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
